@@ -136,7 +136,7 @@ public class MemberService {
         Map<String, List<LookResponse>> result = new HashMap<>();
 
         List<StyleByCountResponse> styleByCountResponses = lookRepository.findByMemberIdOrderByStyleDesc(memberId);
-        List<Style> styles = styleByCountResponses.stream().map(StyleByCountResponse::getStyle).toList();
+        List<Style> styles = styleByCountResponses.stream().map(StyleByCountResponse::getStyle).collect(Collectors.toList());
 
         if (styles.size() < 3) {
             Member member = memberRepository.findById(memberId).orElseThrow(NoSuchElementException::new);
@@ -153,20 +153,20 @@ public class MemberService {
                                                return 0;
                                            }).toList();
 
-            for (int i = 0; i < sortedStylesFromStats.size(); i++) {
-                Style style = Style.valueOf(sortedStylesFromStats.get(i).toUpperCase());
-                if (!styles.contains(style)) {
-                    styles.add(style);
-                }
-
+            for (String sortedStylesFromStat : sortedStylesFromStats) {
+                Style style = Style.valueOf(sortedStylesFromStat.toUpperCase());
                 if (styles.size() >= 3) {
                     break;
+                }
+
+                if (!styles.contains(style)) {
+                    styles.add(style);
                 }
             }
         }
 
 
-        for (int i = 0; i < styles.size(); i++) {
+        for (int i = 0; i < Math.min(3, styles.size()); i++) {
             Style style = styles.get(i);
 
             result.put(style.getKey(), lookRepository.findAllByStyleOrderByCreatedAtDesc(style, PageRequest.of(0, size))
